--- a/student_feedback_form/feedback_styles.css
+++ b/student_feedback_form/feedback_styles.css
@@ -1,3 +1,16 @@
 body {
     background-color: darkseagreen;
+
+    font-family: 'Wire One', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+h2 {
+    font-family: 'Play', sans-serif;
+
+}
+
+.header {
+    font-family: 'Play', sans-serif;
 }
